Fix cut off tooltip overlay
ERM18824

[3.2.x]

--- a/resources/ext.bluespice.visualEditorConnector.css
+++ b/resources/ext.bluespice.visualEditorConnector.css
@@ -180,5 +180,5 @@ at unknown times */
 }
 
 .oo-ui-popupWidget-anchored:not(.bs-vec-styleInspector) .oo-ui-popupWidget-popup {
-	margin-left: -30px;
+	margin-left: 0px;
 }
